Save work before pull, excluding package-lock.json and memory-bank

--- a/projects/storefront/src/app/app.component.html
+++ b/projects/storefront/src/app/app.component.html
@@ -9,4 +9,6 @@
   {{ tKeys.SF_CART_NOTIFICATION_ITEM_ADDED | translate }}
 </div>
 
+<app-cart-drawer></app-cart-drawer>
+
 <app-footer></app-footer>
