--- a/projects/storefront/src/app/login-page/login-page.component.scss
+++ b/projects/storefront/src/app/login-page/login-page.component.scss
@@ -13,7 +13,7 @@
   margin: 0 auto;
   padding-top: 3rem;
   padding-left: 1.5rem;
-  padding-right: 6.5rem;
+  padding-right: 12rem;
 }
 
 .max-w-2xl { 
@@ -33,7 +33,7 @@
   border: 0;
   border-bottom: 1px solid #d1d5db;  
   margin-top: 1.5rem;
-  margin-bottom: 1.5rem;
+  margin-bottom: 2rem;
 }
 
 .breadcrumb {
@@ -76,22 +76,22 @@
 .custom-input {
   width: 65%;
   padding: 1rem 1.25rem;
-  border: 1px solid #d1d5db; 
+  border: 1px solid #e5e5e5; 
   background-color: #ffffff;
-  color: #111827;
+  color: #262626;
   border-radius: 1.5rem;
   font-size: 1rem;
   transition: all 0.2s ease;
   text-align: right;
 
   &::placeholder { 
-    color: #6b7280; 
+    color: #737373; 
     text-align: right; 
   }
 
   &.focus {
     outline: none;
-    border-color: #111827;
+    border-color:#262626;
     box-shadow: 0 0 0 1px #111827;
   }
 
@@ -106,52 +106,30 @@
   align-items: center;
   justify-content: center;
   gap: 0.5rem;
-  
-  /* צבע שחור כהה קבוע */
   background-color: #000000; 
   color: #ffffff;
-  
   padding: 0.85rem 2.5rem;
   border-radius: 9999px;
   border: none;
   cursor: pointer;
   font-weight: 500;
   transition: all 0.3s ease;
-
-  /* מצב שבו הכפתור תקין והעכבר מעליו - נשאר שחור כהה */
   &:hover:not(:disabled) { 
-    opacity: 1;
     background-color: #000000;
+    opacity: 1;
   }
-
-  /* מצב שבו הכפתור חסום (Disabled) */
   &:disabled { 
-    background-color: #111827; /* צבע כהה בבסיס */
+    background-color: #000000; 
     cursor: not-allowed;
-    opacity: 1; /* מבטלים שקיפות כדי לשלוט בצבע ידנית */
-    
-    /* כשהעכבר עובר על כפתור חסום - הופך לאפור מעט */
+    opacity: 1;
+
     &:hover {
-      background-color: #4b5563; /* אפור בינוני-כהה */
+      background-color: #171717;
     }
   }
 
-  .arrow-icon {
-    transition: all 0.3s ease;
-    transform: scaleX(-1);
-    
-    &.hidden { 
-      opacity: 0; 
-      transform: scaleX(-1) translateX(8px); 
-      width: 0; 
-    }
-    &.visible { 
-      opacity: 1; 
-      transform: scaleX(-1) translateX(0); 
-      width: 16px; 
-    }
-  }
 }
+
 .form-actions {
   display: flex;
   align-items: center;
@@ -162,13 +140,18 @@
 .action-links {
   display: flex;
   flex-direction: column;
-  gap: 0.3rem;
+  gap: 0.2rem;
 
-  a { text-decoration: none; font-size: 0.875rem; transition: 0.2s; }
-  .link-muted { color: #4b5563; &:hover { color: #111827; text-decoration: underline; } }
-  .link-bold { color: #111827; font-weight: 600; &:hover { text-decoration: underline; } }
+  a { 
+    text-decoration: none; 
+    font-size: 1rem; 
+    transition: 0.2s; 
+    line-height: 1.2; 
+  }
+
+  .link-muted { color: #737373 ;font-weight:500; &:hover { color: #262626;} }
+  .link-bold { color: #262626; font-weight: 600; &:hover { color: #737373; } }
 }
-
 .invalid-feedback {
   min-height: 1.25rem;
   color: #ef4444;
