--- a/projects/storefront/src/app/products/all-products-page/all-products-page.component.html
+++ b/projects/storefront/src/app/products/all-products-page/all-products-page.component.html
@@ -1,5 +1,5 @@
 <!-- Main page container -->
-<div class="page-wrapper" *ngIf="category$ | async as category; else loadingCategory">
+<div class="page-wrapper">
   <!-- Spacer for fixed header -->
   <div class="header-spacer"></div>
 
@@ -15,30 +15,15 @@
           <span>/</span>
         </li>
         <li class="breadcrumb-item">
-          <span class="breadcrumb-page">{{ category.name }}</span>
+          <span class="breadcrumb-page">{{ tKeys.SF_ALL_PRODUCTS_TITLE | translate }}</span>
         </li>
       </ol>
     </nav>
 
-    <!-- Category Navigation -->
-    <app-category-navigation *ngIf="currentCategoryId$ | async"></app-category-navigation>
-
     <!-- Product Listing Component -->
     <app-product-listing
-      [categoryId]="(currentCategoryId$ | async)!"
-      [pageTitle]="category.name"
-      [showCategoryNavigation]="false"
+      [pageTitle]="tKeys.SF_ALL_PRODUCTS_TITLE | translate"
       [queryParams]="(queryParams$ | async) ?? {}">
     </app-product-listing>
   </div> <!-- End .content-container -->
 </div> <!-- End .page-wrapper -->
-
-<!-- Loading template for category -->
-<ng-template #loadingCategory>
-  <div class="page-wrapper">
-    <div class="header-spacer"></div>
-    <div class="content-container">
-      <p class="loading-message">{{ tKeys.SF_CATEGORY_LOADING_DETAILS | translate }}</p>
-    </div>
-  </div>
-</ng-template>
