--- a/projects/storefront/src/app/shared/components/category-navigation/category-navigation.component.html
+++ b/projects/storefront/src/app/shared/components/category-navigation/category-navigation.component.html
@@ -1,91 +1,54 @@
-<nav class="category-navigation" role="navigation" aria-label="Categories">
-  <!-- Scroll left arrow -->
-  <button
-    *ngIf="hasOverflow"
-    class="scroll-arrow scroll-left"
-    (click)="scroll('left')"
-    [disabled]="!canScrollLeft"
-    aria-label="Scroll categories left"
-  >
-    <span class="arrow-icon">‹</span>
-  </button>
-
-  <!-- Categories container -->
-  <div
-    class="categories-container"
-    #scrollContainer
-    [class.scrollable]="hasOverflow"
-  >
-    <!-- Categories / Loading -->
-    <ng-container
-      *ngIf="categories$ | async as categories; else loadingTemplate"
-    >
-      <!-- Categories list -->
-      <ul
-        *ngIf="categories.length > 0; else emptyTemplate"
-        class="nav-list"
-        #navList
-      >
-        <li
-          class="nav-item"
-          *ngFor="let category of categories; trackBy: trackByCategoryId"
+<div *ngIf="isOpen" class="category-navigation">
+  <div class="category-navigation-container">
+    <div class="category-navigation-grid">
+      <!-- Left Column - Category Titles Only -->
+      <div class="category-navigation-nav">
+        <!-- All Products Link -->
+        <a
+          [routerLink]="generateAllProductsLink()"
+          class="category-navigation-link category-navigation-link-main"
+          (click)="onClose()"
         >
-          <a
-            class="nav-link"
-            [class.active]="currentCategoryId === category.id"
-            [attr.aria-current]="
-              currentCategoryId === category.id ? 'true' : null
-            "
-            [attr.aria-label]="category.name"
-            (click)="onCategoryClick(category)"
-          >
-            <div class="category-image">
-              <img
-                [src]="
-                  category.imageUrl || 'assets/images/default-category.jpg'
-                "
-                [alt]="category.name"
-                (error)="onImageError($event)"
-              />
-            </div>
+          All products
+        </a>
 
-            <span class="category-name">
+        <!-- All Categories from Server (as titles only) -->
+        <div class="category-navigation-category-titles">
+          <ng-container *ngIf="categories$ | async as categories">
+            <a
+              *ngFor="let category of categories"
+              [routerLink]="generateCategoryLink(category.id)"
+              class="category-navigation-link category-navigation-category-title"
+              [class.active]="currentCategoryId === category.id"
+              (click)="onClose()"
+            >
               {{ category.name }}
-            </span>
-          </a>
-        </li>
-      </ul>
-    </ng-container>
-
-    <!-- Loading state -->
-    <ng-template #loadingTemplate>
-      <div class="loading-placeholder">
-        <div class="skeleton-item" *ngFor="let _ of [1, 2, 3, 4]">
-          <div class="skeleton-image"></div>
-          <div class="skeleton-text"></div>
+            </a>
+          </ng-container>
         </div>
       </div>
-    </ng-template>
 
-    <!-- Empty state -->
-    <ng-template #emptyTemplate>
-      <div class="empty-state">No categories available</div>
-    </ng-template>
+      <!-- Right Column - Featured Images (first 2 categories with images) -->
+      <div class="category-navigation-images">
+        <ng-container *ngIf="categories$ | async as categories">
+          <ng-container *ngFor="let category of featuredCategories; let last = last">
+            <a
+              [routerLink]="generateCategoryLink(category.id)"
+              class="category-navigation-image-link"
+              (click)="onClose()"
+            >
+              <div class="category-navigation-image-wrapper">
+                <img
+                  [src]="category.imageUrl"
+                  [alt]="category.name"
+                  class="category-navigation-image"
+                  (error)="onImageError($event)"
+                />
+              </div>
+            </a>
+          </ng-container>
+        </ng-container>
+      </div>
+    </div>
   </div>
-
-  <!-- Scroll right arrow -->
-  <button
-    *ngIf="hasOverflow"
-    class="scroll-arrow scroll-right"
-    (click)="scroll('right')"
-    [disabled]="!canScrollRight"
-    aria-label="Scroll categories right"
-  >
-    <span class="arrow-icon">›</span>
-  </button>
-
-  <!-- Scroll progress -->
-  <div *ngIf="hasOverflow" class="scroll-progress">
-    <div class="scroll-progress-bar" [style.width.%]="scrollProgress"></div>
-  </div>
-</nav>
+</div>
